# Scrapy

./: .gitignore  LICENSE  README.MD  pyproject.toml
Backend/: .gitignore  README.md  conf.py
Backend/collectors/: binance_collector.py
Backend/utils/: metrics.py  metrics_documentation.md
Backendd/utils/: logger.py
CryptoBot/: .gitignore  mainPipeline.py
CryptoBot/DataLayer/: database.py  datalayer.py  datalayer_copy.py
CryptoBot/DecisionLayer/: Entry_logic.py  Stop_tp_logic.py  Trade_frequency_control.py
CryptoBot/ExecutionLayer/: Fees_model.py
CryptoBot/RiskLayer/: Correlation_exposure.py  Daily_loss_limit.py  Max_drawdown_controle.py
CryptoBot/SignalLayer/: Market_detection_detection.py  Risk_filter.py  SentimentConfirmation.py  Technical_signal_scoring.py
CryptoBot/utils/: conf.py
Frontend/scrapy-front/: README.md  index.html  package-lock.json  serveur.js
Frontendd/: package-lock.json
SentimentMarket/: .gitignore  README.md  conf.py  main.py
SentimentMarket/Database/: database.py
SentimentMarket/Scraper/: nitterScraper.py
SentimentMarket/SentimentAnalysis/: sentimentAnalyzer.py  sentimentGeneralAnalyser.py
SentimentMarket/ServiceManager/: coordinateur.py
SentimentMarket/utils/: logger.py
backend/: README.md  main.py
backend/collectors/: coingecko_collector.py
backend/database/: database.py
backend/services/: binance_service.py  coingecko_service.py  crypto_listing_service.py  (+1 more)
frontend/: package.json
scripts/: crypto_market_service.py  crypto_sentiment_service.py  crypto_trading_bot.py  database_cleanup_utility.py
(+56 files in other folders)
